--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+u<!DOCTYPE html>
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
@@ -70,25 +70,49 @@
         <div class="container">
           <h2 class="section-title visually-hidden">Преимущества</h2>
           <ul class="benefits list">
-            <li class="item icon-antenna">
+            <li class="item">
+              <svg class="icon antena">
+                <use href="./images/icons-sprite-opti.svg#icon-antena" widht="70" height="70"></use>
+              </svg>
               <h3 class="title">Внимание к деталям</h3>
               <p class="description">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
-            <li class="item icon-vector">
+            <li class="item">
+              <svg class="icon clock">
+                <use
+                  href="./images/icons-sprite-opti.svg#icon-clock-1"
+                  widht="70"
+                  height="70"
+                ></use>
+              </svg>
               <h3 class="title">Пунктуальность</h3>
               <p class="description">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
-            <li class="item icon-diagram">
+            <li class="item">
+              <svg class="icon diagram">
+                <use
+                  href="./images/icons-sprite-opti.svg#icon-diagram-1"
+                  widht="70"
+                  height="70"
+                ></use>
+              </svg>
               <h3 class="title">Планирование</h3>
               <p class="description">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
-            <li class="item icon-astronaut">
+            <li class="item">
+              <svg class="icon astronaut">
+                <use
+                  href="./images/icons-sprite-opti.svg#icon-astronaut-1"
+                  widht="70"
+                  height="70"
+                ></use>
+              </svg>
               <h3 class="title">Современные технологии</h3>
               <p class="description">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -145,6 +169,52 @@
               <div class="about-team">
                 <h3 class="title">Игорь Демьяненко</h3>
                 <p lang="en" class="position">Product Designer</p>
+                <ul class="team-icons list">
+                  <li class="item-social-media">
+                    <a href="" class="media">
+                      <svg class="icon" width="44" height="44">
+                        <use
+                          href="./images/icons-sprite-opti.svg#icon-instagram-2"
+                          width="20"
+                          height="20"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-social-media">
+                    <a href="" class="media">
+                      <svg class="icon" width="44" height="44">
+                        <use
+                          href="./images/icons-sprite-opti.svg#icon-twitter-1"
+                          width="20"
+                          height="20"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-social-media">
+                    <a href="" class="media">
+                      <svg class="icon" width="44" height="44">
+                        <use
+                          href="./images/icons-sprite-opti.svg#icon-facebook-1"
+                          width="20"
+                          height="20"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-social-media">
+                    <a href="" class="media">
+                      <svg class="icon" width="44" height="44">
+                        <use
+                          href="./images/icons-sprite-opti.svg#icon-linkedin-1"
+                          width="20"
+                          height="20"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <!--Репина-->
@@ -159,6 +229,52 @@
               <div class="about-team">
                 <h3 class="title">Ольга Репина</h3>
                 <p lang="en" class="position">Frontend Developer</p>
+                <ul class="team-icons list">
+                  <li class="item-social-media">
+                    <a href="" class="media">
+                      <svg class="icon" width="44" height="44">
+                        <use
+                          href="./images/icons-sprite-opti.svg#icon-instagram-2"
+                          width="20"
+                          height="20"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-social-media">
+                    <a href="" class="media">
+                      <svg class="icon" width="44" height="44">
+                        <use
+                          href="./images/icons-sprite-opti.svg#icon-twitter-1"
+                          width="20"
+                          height="20"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-social-media">
+                    <a href="" class="media">
+                      <svg class="icon" width="44" height="44">
+                        <use
+                          href="./images/icons-sprite-opti.svg#icon-facebook-1"
+                          width="20"
+                          height="20"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-social-media">
+                    <a href="" class="media">
+                      <svg class="icon" width="44" height="44">
+                        <use
+                          href="./images/icons-sprite-opti.svg#icon-linkedin-1"
+                          width="20"
+                          height="20"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <!--Тарасов-->
@@ -173,6 +289,52 @@
               <div class="about-team">
                 <h3 class="title">Николай Тарасов</h3>
                 <p lang="en" class="position">Marketing</p>
+                <ul class="team-icons list">
+                  <li class="item-social-media">
+                    <a href="" class="media">
+                      <svg class="icon" width="44" height="44">
+                        <use
+                          href="./images/icons-sprite-opti.svg#icon-instagram-2"
+                          width="20"
+                          height="20"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-social-media">
+                    <a href="" class="media">
+                      <svg class="icon" width="44" height="44">
+                        <use
+                          href="./images/icons-sprite-opti.svg#icon-twitter-1"
+                          width="20"
+                          height="20"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-social-media">
+                    <a href="" class="media">
+                      <svg class="icon" width="44" height="44">
+                        <use
+                          href="./images/icons-sprite-opti.svg#icon-facebook-1"
+                          width="20"
+                          height="20"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-social-media">
+                    <a href="" class="media">
+                      <svg class="icon" width="44" height="44">
+                        <use
+                          href="./images/icons-sprite-opti.svg#icon-linkedin-1"
+                          width="20"
+                          height="20"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <!--Ермаков-->
@@ -187,7 +349,90 @@
               <div class="about-team">
                 <h3 class="title">Михаил Ермаков</h3>
                 <p lang="en" class="position">UI Designer</p>
+                <ul class="team-icons list">
+                  <li class="item-social-media">
+                    <a href="" class="media">
+                      <svg class="icon" width="44" height="44">
+                        <use
+                          href="./images/icons-sprite-opti.svg#icon-instagram-2"
+                          width="20"
+                          height="20"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-social-media">
+                    <a href="" class="media">
+                      <svg class="icon" width="44" height="44">
+                        <use
+                          href="./images/icons-sprite-opti.svg#icon-twitter-1"
+                          width="20"
+                          height="20"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-social-media">
+                    <a href="" class="media">
+                      <svg class="icon" width="44" height="44">
+                        <use
+                          href="./images/icons-sprite-opti.svg#icon-facebook-1"
+                          width="20"
+                          height="20"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-social-media">
+                    <a href="" class="media">
+                      <svg class="icon" width="44" height="44">
+                        <use
+                          href="./images/icons-sprite-opti.svg#icon-linkedin-1"
+                          width="20"
+                          height="20"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="section clients">
+        <div class="container">
+          <h2 class="section-title">Постоянные клиенты</h2>
+          <ul class="our-clients list">
+            <li class="item">
+              <svg class="icon" width="41" height="47">
+                <use href="./images/icons-sprite-opti.svg#icon-group1"></use>
+              </svg>
+            </li>
+            <li class="item">
+              <svg class="icon" widht="40" height="52">
+                <use href="./images/icons-sprite-opti.svg#icon-group2"></use>
+              </svg>
+            </li>
+            <li class="item">
+              <svg class="icon" width="44" height="42">
+                <use href="./images/icons-sprite-opti.svg#icon-group3"></use>
+              </svg>
+            </li>
+            <li class="item">
+              <svg class="icon" width="85" height="41">
+                <use href="./images/icons-sprite-opti.svg#icon-group4"></use>
+              </svg>
+            </li>
+            <li class="item">
+              <svg class="icon" width="63" height="46">
+                <use href="./images/icons-sprite-opti.svg#icon-group5"></use>
+              </svg>
+            </li>
+            <li class="item">
+              <svg class="icon" width="94" height="44">
+                <use href="./images/icons-sprite-opti.svg#icon-group6"></use>
+              </svg>
             </li>
           </ul>
         </div>
