--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-u<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
@@ -170,47 +170,31 @@ u<!DOCTYPE html>
                 <h3 class="title">Игорь Демьяненко</h3>
                 <p lang="en" class="position">Product Designer</p>
                 <ul class="team-icons list">
-                  <li class="item-social-media">
+                  <li class="item-social">
                     <a href="" class="media">
-                      <svg class="icon" width="44" height="44">
-                        <use
-                          href="./images/icons-sprite-opti.svg#icon-instagram-2"
-                          width="20"
-                          height="20"
-                        ></use>
+                      <svg class="icon" width="20" height="20">
+                        <use href="./images/icons-sprite-opti.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="item-social-media">
+                  <li class="item-social">
                     <a href="" class="media">
-                      <svg class="icon" width="44" height="44">
-                        <use
-                          href="./images/icons-sprite-opti.svg#icon-twitter-1"
-                          width="20"
-                          height="20"
-                        ></use>
+                      <svg class="icon" width="20" height="20">
+                        <use href="./images/icons-sprite-opti.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="item-social-media">
+                  <li class="item-social">
                     <a href="" class="media">
-                      <svg class="icon" width="44" height="44">
-                        <use
-                          href="./images/icons-sprite-opti.svg#icon-facebook-1"
-                          width="20"
-                          height="20"
-                        ></use>
+                      <svg class="icon" width="20" height="20">
+                        <use href="./images/icons-sprite-opti.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="item-social-media">
+                  <li class="item-social">
                     <a href="" class="media">
-                      <svg class="icon" width="44" height="44">
-                        <use
-                          href="./images/icons-sprite-opti.svg#icon-linkedin-1"
-                          width="20"
-                          height="20"
-                        ></use>
+                      <svg class="icon" width="20" height="20">
+                        <use href="./images/icons-sprite-opti.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -230,47 +214,31 @@ u<!DOCTYPE html>
                 <h3 class="title">Ольга Репина</h3>
                 <p lang="en" class="position">Frontend Developer</p>
                 <ul class="team-icons list">
-                  <li class="item-social-media">
+                  <li class="item-social">
                     <a href="" class="media">
-                      <svg class="icon" width="44" height="44">
-                        <use
-                          href="./images/icons-sprite-opti.svg#icon-instagram-2"
-                          width="20"
-                          height="20"
-                        ></use>
+                      <svg class="icon" width="20" height="20">
+                        <use href="./images/icons-sprite-opti.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="item-social-media">
+                  <li class="item-social">
                     <a href="" class="media">
-                      <svg class="icon" width="44" height="44">
-                        <use
-                          href="./images/icons-sprite-opti.svg#icon-twitter-1"
-                          width="20"
-                          height="20"
-                        ></use>
+                      <svg class="icon" width="20" height="20">
+                        <use href="./images/icons-sprite-opti.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="item-social-media">
+                  <li class="item-social">
                     <a href="" class="media">
-                      <svg class="icon" width="44" height="44">
-                        <use
-                          href="./images/icons-sprite-opti.svg#icon-facebook-1"
-                          width="20"
-                          height="20"
-                        ></use>
+                      <svg class="icon" width="20" height="20">
+                        <use href="./images/icons-sprite-opti.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="item-social-media">
+                  <li class="item-social">
                     <a href="" class="media">
-                      <svg class="icon" width="44" height="44">
-                        <use
-                          href="./images/icons-sprite-opti.svg#icon-linkedin-1"
-                          width="20"
-                          height="20"
-                        ></use>
+                      <svg class="icon" width="20" height="20">
+                        <use href="./images/icons-sprite-opti.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -290,47 +258,31 @@ u<!DOCTYPE html>
                 <h3 class="title">Николай Тарасов</h3>
                 <p lang="en" class="position">Marketing</p>
                 <ul class="team-icons list">
-                  <li class="item-social-media">
+                  <li class="item-social">
                     <a href="" class="media">
-                      <svg class="icon" width="44" height="44">
-                        <use
-                          href="./images/icons-sprite-opti.svg#icon-instagram-2"
-                          width="20"
-                          height="20"
-                        ></use>
+                      <svg class="icon" width="20" height="20">
+                        <use href="./images/icons-sprite-opti.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="item-social-media">
+                  <li class="item-social">
                     <a href="" class="media">
-                      <svg class="icon" width="44" height="44">
-                        <use
-                          href="./images/icons-sprite-opti.svg#icon-twitter-1"
-                          width="20"
-                          height="20"
-                        ></use>
+                      <svg class="icon" width="20" height="20">
+                        <use href="./images/icons-sprite-opti.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="item-social-media">
+                  <li class="item-social">
                     <a href="" class="media">
-                      <svg class="icon" width="44" height="44">
-                        <use
-                          href="./images/icons-sprite-opti.svg#icon-facebook-1"
-                          width="20"
-                          height="20"
-                        ></use>
+                      <svg class="icon" width="20" height="20">
+                        <use href="./images/icons-sprite-opti.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="item-social-media">
+                  <li class="item-social">
                     <a href="" class="media">
-                      <svg class="icon" width="44" height="44">
-                        <use
-                          href="./images/icons-sprite-opti.svg#icon-linkedin-1"
-                          width="20"
-                          height="20"
-                        ></use>
+                      <svg class="icon" width="20" height="20">
+                        <use href="./images/icons-sprite-opti.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -350,47 +302,31 @@ u<!DOCTYPE html>
                 <h3 class="title">Михаил Ермаков</h3>
                 <p lang="en" class="position">UI Designer</p>
                 <ul class="team-icons list">
-                  <li class="item-social-media">
+                  <li class="item-social">
                     <a href="" class="media">
-                      <svg class="icon" width="44" height="44">
-                        <use
-                          href="./images/icons-sprite-opti.svg#icon-instagram-2"
-                          width="20"
-                          height="20"
-                        ></use>
+                      <svg class="icon" width="20" height="20">
+                        <use href="./images/icons-sprite-opti.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="item-social-media">
+                  <li class="item-social">
                     <a href="" class="media">
-                      <svg class="icon" width="44" height="44">
-                        <use
-                          href="./images/icons-sprite-opti.svg#icon-twitter-1"
-                          width="20"
-                          height="20"
-                        ></use>
+                      <svg class="icon" width="20" height="20">
+                        <use href="./images/icons-sprite-opti.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="item-social-media">
+                  <li class="item-social">
                     <a href="" class="media">
-                      <svg class="icon" width="44" height="44">
-                        <use
-                          href="./images/icons-sprite-opti.svg#icon-facebook-1"
-                          width="20"
-                          height="20"
-                        ></use>
+                      <svg class="icon" width="20" height="20">
+                        <use href="./images/icons-sprite-opti.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="item-social-media">
+                  <li class="item-social">
                     <a href="" class="media">
-                      <svg class="icon" width="44" height="44">
-                        <use
-                          href="./images/icons-sprite-opti.svg#icon-linkedin-1"
-                          width="20"
-                          height="20"
-                        ></use>
+                      <svg class="icon" width="20" height="20">
+                        <use href="./images/icons-sprite-opti.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -400,39 +336,53 @@ u<!DOCTYPE html>
           </ul>
         </div>
       </section>
+
+      <!-- Клиенты -->
       <section class="section clients">
         <div class="container">
           <h2 class="section-title">Постоянные клиенты</h2>
           <ul class="our-clients list">
             <li class="item">
-              <svg class="icon" width="41" height="47">
-                <use href="./images/icons-sprite-opti.svg#icon-group1"></use>
-              </svg>
+              <a href="" class="clients-link">
+                <svg class="icon" width="106" height="60">
+                  <use href="./images/icons-sprite-opti.svg#icon-group1"></use>
+                </svg>
+              </a>
             </li>
             <li class="item">
-              <svg class="icon" widht="40" height="52">
-                <use href="./images/icons-sprite-opti.svg#icon-group2"></use>
-              </svg>
+              <a href="" class="clients-link">
+                <svg class="icon" width="106" height="60">
+                  <use href="./images/icons-sprite-opti.svg#icon-group2"></use>
+                </svg>
+              </a>
             </li>
             <li class="item">
-              <svg class="icon" width="44" height="42">
-                <use href="./images/icons-sprite-opti.svg#icon-group3"></use>
-              </svg>
+              <a href="" class="clients-link">
+                <svg class="icon" width="106" height="60">
+                  <use href="./images/icons-sprite-opti.svg#icon-group3"></use>
+                </svg>
+              </a>
             </li>
             <li class="item">
-              <svg class="icon" width="85" height="41">
-                <use href="./images/icons-sprite-opti.svg#icon-group4"></use>
-              </svg>
+              <a href="" class="clients-link">
+                <svg class="icon" width="106" height="60">
+                  <use href="./images/icons-sprite-opti.svg#icon-group4"></use>
+                </svg>
+              </a>
             </li>
             <li class="item">
-              <svg class="icon" width="63" height="46">
-                <use href="./images/icons-sprite-opti.svg#icon-group5"></use>
-              </svg>
+              <a href="" class="clients-link">
+                <svg class="icon" width="106" height="60">
+                  <use href="./images/icons-sprite-opti.svg#icon-group5"></use>
+                </svg>
+              </a>
             </li>
             <li class="item">
-              <svg class="icon" width="94" height="44">
-                <use href="./images/icons-sprite-opti.svg#icon-group6"></use>
-              </svg>
+              <a href="" class="clients-link">
+                <svg class="icon" width="106" height="60">
+                  <use href="./images/icons-sprite-opti.svg#icon-group6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -441,15 +391,52 @@ u<!DOCTYPE html>
 
     <!--Футер-->
     <footer>
-      <div class="container">
-        <a href="./index.html" class="name studio">Web<span class="name-second">Studio</span></a>
-        <address class="location">г. Киев, пр-т Леси Украинки, 26</address>
-        <ul class="connection list">
-          <li class="item">
-            <a href="mailto:info@devstudio.com" class="phone">info@devstudio.com</a>
-          </li>
-          <li class="item"><a href="tel:+380961111111" class="mail">+38 096 111 11 11</a></li>
-        </ul>
+      <div class="container footer">
+        <div class="contact-info">
+          <a href="./index.html" class="name studio">Web<span class="name-second">Studio</span></a>
+          <address class="location">г. Киев, пр-т Леси Украинки, 26</address>
+          <ul class="connection list">
+            <li class="item">
+              <a href="mailto:info@devstudio.com" class="phone">info@devstudio.com</a>
+            </li>
+            <li class="item"><a href="tel:+380961111111" class="mail">+38 096 111 11 11</a></li>
+          </ul>
+        </div>
+        <div class="container-join">
+          <p class="join">Присоединяйтесь</p>
+          <div class="our-social-media">
+            <ul class="social-media list">
+              <li class="item">
+                <a href="" class="media-link">
+                  <svg class="icon" width="20" height="20">
+                    <use href="./images/icons-sprite-opti.svg#icon-instagram-2"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item">
+                <a href="" class="media-link">
+                  <svg class="icon" width="20" height="20">
+                    <use href="./images/icons-sprite-opti.svg#icon-twitter-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item">
+                <a href="" class="media-link">
+                  <svg class="icon" width="20" height="20">
+                    <use href="./images/icons-sprite-opti.svg#icon-facebook-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item">
+                <a href="" class="media-link">
+                  <svg class="icon" width="20" height="20">
+                    <use href="./images/icons-sprite-opti.svg#icon-linkedin-1"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
