--- a/portfolio.html
+++ b/portfolio.html
@@ -38,9 +38,21 @@
         <!--Контакты-->
         <ul class="contacts list">
           <li class="item">
-            <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="link">
+              <svg class="icon" width="16" height="12">
+                <use href="./images/icons-sprite-opti.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com
+            </a>
           </li>
-          <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+          <li class="item">
+            <a href="tel:+380961111111" class="link">
+              <svg class="icon" width="10" height="16">
+                <use href="./images/icons-sprite-opti.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
+          </li>
         </ul>
       </div>
     </header>
@@ -188,15 +200,52 @@
 
     <!--Футер-->
     <footer>
-      <div class="container">
-        <a href="./index.html" class="name studio">Web<span class="name-second">Studio</span></a>
-        <address class="location">г. Киев, пр-т Леси Украинки, 26</address>
-        <ul class="connection list">
-          <li class="item">
-            <a href="mailto:info@devstudio.com" class="phone">info@devstudio.com</a>
-          </li>
-          <li class="item"><a href="tel:+380961111111" class="mail">+38 096 111 11 11</a></li>
-        </ul>
+      <div class="container footer">
+        <div class="contact-info">
+          <a href="./index.html" class="name studio">Web<span class="name-second">Studio</span></a>
+          <address class="location">г. Киев, пр-т Леси Украинки, 26</address>
+          <ul class="connection list">
+            <li class="item">
+              <a href="mailto:info@devstudio.com" class="phone">info@devstudio.com</a>
+            </li>
+            <li class="item"><a href="tel:+380961111111" class="mail">+38 096 111 11 11</a></li>
+          </ul>
+        </div>
+        <div class="container-join">
+          <p class="join">Присоединяйтесь</p>
+          <div class="our-social-media">
+            <ul class="social-media list">
+              <li class="item">
+                <a href="" class="media-link">
+                  <svg class="icon" width="20" height="20">
+                    <use href="./images/icons-sprite-opti.svg#icon-instagram-2"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item">
+                <a href="" class="media-link">
+                  <svg class="icon" width="20" height="20">
+                    <use href="./images/icons-sprite-opti.svg#icon-twitter-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item">
+                <a href="" class="media-link">
+                  <svg class="icon" width="20" height="20">
+                    <use href="./images/icons-sprite-opti.svg#icon-facebook-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item">
+                <a href="" class="media-link">
+                  <svg class="icon" width="20" height="20">
+                    <use href="./images/icons-sprite-opti.svg#icon-linkedin-1"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
