Добавляет правки ментора

--- a/portfolio.html
+++ b/portfolio.html
@@ -72,7 +72,7 @@
         <!-- Проекты -->
         <ul class="projects list">
           <li class="item">
-            <a>
+            <a href="" class="project-link">
               <img src="./images/img1.jpg" class="photo" alt="Ноутбук" width="370" height="294" />
               <div class="about-project">
                 <h2 class="title">Технокряк</h2>
@@ -81,7 +81,7 @@
             </a>
           </li>
           <li class="item">
-            <a>
+            <a href="" class="project-link">
               <img
                 src="./images/img2.jpg"
                 class="photo"
@@ -96,7 +96,7 @@
             </a>
           </li>
           <li class="item">
-            <a>
+            <a href="" class="project-link">
               <img
                 src="./images/img3.jpg"
                 class="photo"
@@ -111,7 +111,7 @@
             </a>
           </li>
           <li class="item">
-            <a>
+            <a href="" class="project-link">
               <img src="./images/img4.jpg" class="photo" alt="Наушники" width="370" height="294" />
               <div class="about-project">
                 <h2 class="title">Проект <span lang="en">Prime</span></h2>
@@ -120,7 +120,7 @@
             </a>
           </li>
           <li class="item">
-            <a>
+            <a href="" class="project-link">
               <img
                 src="./images/img5.jpg"
                 class="photo"
@@ -135,7 +135,7 @@
             </a>
           </li>
           <li class="item">
-            <a>
+            <a href="" class="project-link">
               <img
                 src="./images/img6.jpg"
                 class="photo"
@@ -150,7 +150,7 @@
             </a>
           </li>
           <li class="item">
-            <a>
+            <a href="" class="project-link">
               <img
                 src="./images/img7.jpg"
                 class="photo"
@@ -165,7 +165,7 @@
             </a>
           </li>
           <li class="item">
-            <a>
+            <a href="" class="project-link">
               <img
                 src="./images/img8.jpg"
                 class="photo"
@@ -180,7 +180,7 @@
             </a>
           </li>
           <li class="item">
-            <a>
+            <a href="" class="project-link">
               <img
                 src="./images/img9.jpg"
                 class="photo"
