--- a/index.html
+++ b/index.html
@@ -71,48 +71,44 @@
           <h2 class="section-title visually-hidden">Преимущества</h2>
           <ul class="benefits list">
             <li class="item">
-              <svg class="icon antena">
-                <use href="./images/icons-sprite-opti.svg#icon-antena" widht="70" height="70"></use>
-              </svg>
+              <div class="about-benefit">
+                <svg class="icon" widht="70" height="70">
+                  <use href="./images/icons-sprite-opti.svg#icon-antena"></use>
+                </svg>
+              </div>
               <h3 class="title">Внимание к деталям</h3>
               <p class="description">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
             <li class="item">
-              <svg class="icon clock">
-                <use
-                  href="./images/icons-sprite-opti.svg#icon-clock-1"
-                  widht="70"
-                  height="70"
-                ></use>
-              </svg>
+              <div class="about-benefit">
+                <svg class="icon" widht="70" height="70">
+                  <use href="./images/icons-sprite-opti.svg#icon-clock-1"></use>
+                </svg>
+              </div>
               <h3 class="title">Пунктуальность</h3>
               <p class="description">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
             <li class="item">
-              <svg class="icon diagram">
-                <use
-                  href="./images/icons-sprite-opti.svg#icon-diagram-1"
-                  widht="70"
-                  height="70"
-                ></use>
-              </svg>
+              <div class="about-benefit">
+                <svg class="icon" widht="70" height="70">
+                  <use href="./images/icons-sprite-opti.svg#icon-diagram-1"></use>
+                </svg>
+              </div>
               <h3 class="title">Планирование</h3>
               <p class="description">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
             <li class="item">
-              <svg class="icon astronaut">
-                <use
-                  href="./images/icons-sprite-opti.svg#icon-astronaut-1"
-                  widht="70"
-                  height="70"
-                ></use>
-              </svg>
+              <div class="about-benefit">
+                <svg class="icon" widht="70" height="70">
+                  <use href="./images/icons-sprite-opti.svg#icon-astronaut-1"></use>
+                </svg>
+              </div>
               <h3 class="title">Современные технологии</h3>
               <p class="description">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
